--- a/tasks/templates/tasks/item_list_detail.html
+++ b/tasks/templates/tasks/item_list_detail.html
@@ -41,7 +41,7 @@
 
         <div class="mt-4">
             <h3 class="fw-bold">Edit List</h3>
-            <form method="post">
+            <form method="post" onsubmit="return confirmDeletion(event)">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <button type="submit" name="edit_list" class="btn btn-primary">Save Changes</button>
@@ -57,5 +57,15 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- Confirmation Dialog Script -->
+    <script>
+        function confirmDeletion(event) {
+            if (event.submitter.name === 'delete_list') {
+                return confirm('Are you sure you want to delete this list? All items in it will be removed as well.');
+            }
+            return true;
+        }
+    </script>
 </body>
 </html>
